Fix a few issues found by IDE inspections